tests/semantic_analysis/error/wrong_redefined2.c
wrong_redefined2\.c:3:5: error:.*